mobile alignment fix for about

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -8,6 +8,10 @@
 		strong{
 			color:$text-blue;
 		}
+
+		@media screen and (max-width:$desktop){
+			text-align:center;
+		}
 	}
 
 	.col-40{
@@ -43,6 +47,10 @@
 
 		hr{
 			margin:10px 0px 20px;
+
+			@media screen and (max-width:$desktop){
+				margin:10px auto 20px;
+			}
 		}
 
 		@media screen and (max-width:$desktop){
